--- a/css/public.css
+++ b/css/public.css
@@ -183,3 +183,13 @@ h3.menu-item-title {
     width: 100%;
   }
 }
+
+
+table {
+  border-collapse: separate;
+  border-spacing: 50px 0;
+}
+
+td {
+  padding: 10px 0;
+}
