--- a/css/public.css
+++ b/css/public.css
@@ -4,6 +4,10 @@
   border: 2px solid #3F0C1F;
 }
 
+.menu-center {
+ text-align: center;
+}
+
 #menu-tile, #specials-tile, #map-tile {
   height: 250px;
   width: 100%;
